20190508
--------
- #42877 - Support compressed delimited files

20190429
--------
- #42932 - Duplicated records when reading Parquet files

20190415
--------
- #42277 - Issue detecting binary fields in avro files

20190212
--------
- #41819 - Issue converting INT96 and FIXED_LEN_BYTE_ARRAY Parquet types to VDP types
- #41615 - Added profile errorprone to execute error prone


20190109
-------
- #41229 - Error joining files residing in the same hadoop filesystem

20181121
-------
- #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
- #40062 - Include a class similar to the file system wrapper to list files in a bucket
- #40578 - Configure null-values in DFS Delimited Text File Wrapper
- #40601 - Make CSV parser more lenient allowing the wrapper to recover from parsing errors
- #40673 - Error executing a wrapper without Kerberos after a kerberized one
- #40675 - Skip BOM in delimited files

20181024
--------
- #40060 - File name pattern explanation is misleading
- #40232 - ClassNotFoundException accesing Amazon S3 using IAM Assumed Roles

20181008
-------
- #39744 - Rebranding of the HDFS wrapper
- #39931 - Failed connections could require restarting VDP to refresh wrapper configuration files

20181003
-------
- #37872 - Parquet files: add suport for DATE and DECIMAL types
- #37987 - Read files recursively in HDFS wrapper
- #39404 - Complete the support for Key and Value classes of Sequence and Map Wrappers
- #31056 - Explain in the manual projection with avro files
- #33125 - Create a Doc appendix explicitly explaining how to use the Hadoop vendor's own client libs
- #37754 - Add support for '\t' as separator for TAB's instead of using the TAB space as value for separator
- #39559 - Deprecate WebHDFSFileWrapper
- #38339 - Add support for S3A in the HDFS wrapper
- #37988 - Support for Azure Data Lake Store and Azure Blob files