@@ -22,6 +22,7 @@
 package com.denodo.connect.hadoop.hdfs.wrapper;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.sql.Types;
 import java.util.List;
 import java.util.Map;
@@ -50,6 +51,8 @@ import com.denodo.vdb.engine.customwrapper.condition.CustomWrapperConditionHolde
 import com.denodo.vdb.engine.customwrapper.expression.CustomWrapperFieldExpression;
 import com.denodo.vdb.engine.customwrapper.input.type.CustomWrapperInputParameterTypeFactory;
 import com.denodo.vdb.engine.customwrapper.input.type.CustomWrapperInputParameterTypeFactory.RouteType;
+import com.denodo.vdb.engine.customwrapper.input.value.CustomWrapperInputParameterRouteValue;
+import com.denodo.vdb.engine.customwrapper.input.value.CustomWrapperInputParameterValue;
 
 /**
  * HDFS file custom wrapper for reading Avro files stored in HDFS (Hadoop
@@ -86,10 +89,10 @@ public class HDFSAvroFileWrapper extends AbstractSecureHadoopWrapper {
                 CustomWrapperInputParameterTypeFactory.booleanType(false)),
             new CustomWrapperInputParameter(Parameter.CORE_SITE_PATH,
                 "Local route of core-site.xml configuration file ",
-                false,  CustomWrapperInputParameterTypeFactory.routeType(new RouteType [] {RouteType.LOCAL})),
+                false,  CustomWrapperInputParameterTypeFactory.routeType(new RouteType [] {RouteType.LOCAL, RouteType.HTTP, RouteType.FTP})),
             new CustomWrapperInputParameter(Parameter.HDFS_SITE_PATH,
                 "Local route of hdfs-site.xml configuration file ",
-                false,  CustomWrapperInputParameterTypeFactory.routeType(new RouteType [] {RouteType.LOCAL}))                   
+                false,  CustomWrapperInputParameterTypeFactory.routeType(new RouteType [] {RouteType.LOCAL, RouteType.HTTP, RouteType.FTP}))
         };
 
     @Override
@@ -122,11 +125,7 @@ public class HDFSAvroFileWrapper extends AbstractSecureHadoopWrapper {
                     null, !isSearchable, CustomWrapperSchemaParameter.NOT_SORTABLE,
                     !isUpdateable, !isNullable, isMandatory);
 
-            final String fileSystemURI = inputValues.get(Parameter.FILESYSTEM_URI);
-            final String coreSitePath = inputValues.get(Parameter.CORE_SITE_PATH);
-            final String hdfsSitePath = inputValues.get(Parameter.HDFS_SITE_PATH);
-            
-            final Configuration conf = HadoopConfigurationUtils.getConfiguration(fileSystemURI, coreSitePath, hdfsSitePath);
+            final Configuration conf = getHadoopConfiguration(inputValues);
             final Schema avroSchema = AvroSchemaUtils.buildSchema(inputValues, conf);
             final SchemaElement javaSchema = HDFSAvroFileReader.getSchema(avroSchema);
 
@@ -139,20 +138,16 @@ public class HDFSAvroFileWrapper extends AbstractSecureHadoopWrapper {
 
     }
 
-
     @Override
     public void doRun(final CustomWrapperConditionHolder condition, final List<CustomWrapperFieldExpression> projectedFields,
         final CustomWrapperResult result, final Map<String, String> inputValues) throws CustomWrapperException {
 
-        final String fileSystemURI = inputValues.get(Parameter.FILESYSTEM_URI);
+        final Configuration conf = getHadoopConfiguration(inputValues);;
+
         final boolean delete = Boolean.parseBoolean(inputValues.get(Parameter.DELETE_AFTER_READING));
-        final String coreSitePath = inputValues.get(Parameter.CORE_SITE_PATH);
-        final String hdfsSitePath = inputValues.get(Parameter.HDFS_SITE_PATH);
-        
-        final Configuration conf = HadoopConfigurationUtils.getConfiguration(fileSystemURI, coreSitePath, hdfsSitePath);
+
         final String avroFilePath = getAvroFilePath(condition);
         final Path path = new Path(avroFilePath);
-        
         final String fileNamePattern = inputValues.get(Parameter.FILE_NAME_PATTERN);
 
         HDFSFileReader reader = null;
@@ -189,7 +184,7 @@ public class HDFSAvroFileWrapper extends AbstractSecureHadoopWrapper {
 
         }
     }
-    
+
     private static String getAvroFilePath(final CustomWrapperConditionHolder condition) {
 
         String avroFilePath = null;
